fixing corners on search form, and vertically aligning <td> contents

--- a/css/override.css
+++ b/css/override.css
@@ -315,6 +315,10 @@ table.mainTable th.headerSortDown {
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#2786C1', endColorstr='#2D98DB',GradientType=0 ); /* ie */
 }
 
+table.mainTable td {
+    vertical-align: top;
+}
+
 .paginate_button {
     
 }
@@ -392,7 +396,8 @@ table.mainTable th.headerSortDown {
 }
 
 .ui-corner-all,
-#navigationTabs li ul {
+#navigationTabs li ul,
+#search form {
     -webkit-border-radius: 3px !important;
     -moz-border-radius: 3px !important;
     border-radius: 3px !important;
